<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uPhysic</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="btn_start">Bắt đầu</string>
    <string name="btn_stop">Tạm dừng</string>
    <string name="btn_reset">Làm lại</string>
    <string name="btn_graph">Đồ thị</string>
    <string name="btn_start_lab">Bắt đầu thí nghiệm</string>
    <string name="choice_graph_title">Chọn đồ thị</string>
    <string name="btn_select_lab">Chọn thí nghiệm</string>
    <string name="btn_show_vector">Véc tơ</string>
    <string name="btn_ok">Thiết lập</string>
    <string name="btn_cancel">Hủy bỏ</string>
    <string name="x_root">Gốc x (m)</string>
    <string name="y_root">Gốc y (m)</string>
    <string name="line_lenght">Độ dài dây (m)</string>
    <string name="environment_accelerator">Gia tốc trọng trường (m/s2)</string>
    <string name="time_per_frame">Thời gian (s)</string>
    <string name="x_velocity">Vận tốc x (m/s)</string>
    <string name="y_velocity">Vận tốc y(m/s)</string>
    <string name="x_accelerator">Gia tốc x (m/s2)</string>
    <string name="y_accelerator">Gia tốc y (m/s2)</string>
    <string name="clear_graph">Xóa đồ thị</string>
    <string name="hide_graph">Ẩn đồ thị</string>
    <string name="alpha_zero">Góc ban đầu (rad)</string>
    <string name="total_time">Tổng thời gian (s)</string>
    <string name="omega">ô mê ga (rad/s)</string>
    <string name="line">Lực căng dây</string>
    <string name="tangential_accelerator">Gia tốc tiếp tuyến (m/s2)</string>
    <string name="choice_vector_title">Chọn véc tơ</string>
    <string name="pendulum">Con lắc đơn</string>
    <string name="spring">Con lắc lò xo</string>
    <string name="projectile">Chuyển động ném</string>
    <string name="collision">Vật va chạm</string>
    <string name="choice_laboratory">Chọn thí nghiệm</string>
    <string name="x_amplitude">Biên độ x (m)</string>
    <string name="y_amplitude">Biên độ y (m)</string>
    <string name="time">Thời gian (s))</string>
    <string name="period">Chu kỳ (s)</string>
    <string name="frequency">Tần số</string>
    <string name="stiffness">Độ cứng (N/m)</string>
    <string name="mass">Trọng lượng (kg)</string>
    <string name="amplitude">Biên độ (m)</string>
    <string name="x_blance">X cân bằng</string>
    <string name="resistance">Lực cản (N)</string>
    <string name="mass_ball_1">Khối lượng ball 1 (kg)</string>
    <string name="mass_ball_2">Khối lượng ball 2 (kg)</string>
    <string name ="v1_after_collsion">Vận tốc ball 1 sau va chạm(m/s)</string>
    <string name ="v2_after_collsion">Vận tốc ball 2 sau va chạm(m/s)</string>
	<string name ="v1_before_collsion">Vận tốc ball 1 trước va chạm(m/s)</string>
    <string name ="v2_before_collsion">Vận tốc ball 2 trước va chạm(m/s)</string>
    <string name ="type_collision">Loại va chạm:đàn hồi - 0,mềm - 1</string>   
    <string name ="y_max">Độ cao cực đại (m)</string>
    <string name ="x_max">Tầm bay xa (m)</string>
    <string name ="high_zero">Độ cao ban đầu (m)</string>
    <string name ="velocity_zero">Vận tốc ban đầu(m/s)</string>
    <string name ="alpha_zero_2">Góc ném (độ)</string>
    <string name="main_menu">uPhysic</string>
    <string name="client_activity">Đăng nhập</string>
    <string name="btn_back">Quay lại</string>
    <string name="btn_exit">Thoát</string>
    <string name="dot">.</string>
    <string name="address">IP: </string>
    <string name="port">Port: </string>
    <string name="setting_time_per_frame">Time per frame: </string>
    <string name="btn_refresh">Kết nối lại</string>
    <string name="title_waitting">Màn hình chờ</string>
    <string name="title_working">Làm bài tập</string>
    <string name="title_result">Kết quả bài làm</string>
    <string name="x_coordinate">Tọa độ x (m)</string>
    <string name="y_coordinate">Tọa độ y (m)</string>
    <string name="TPF">TPF: </string>
    <string name="velocity">Vận tốc (m/s)</string>
    <string name="accelerator">Gia tốc (m/s2)</string>
</resources>