
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/root_view" >
    <uPhysic.drawer.Environment
        android:id="@+id/environment"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:background="#81F7F3" />
    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="7"
        android:background="#BDBDBD"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/control_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:baselineAligned="false">
            <LinearLayout
            	android:id="@+id/control_button_left"
            	android:layout_width="match_parent"
            	android:layout_height="fill_parent"
            	android:orientation="vertical"
            	android:layout_weight="2.5" >
            	<LinearLayout 
                	android:id="@+id/cb_line1"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:orientation="horizontal" >
	            	<Button 
						android:id="@+id/btn_select_lab"
						android:text="@string/btn_select_lab"
						android:layout_height="wrap_content"
						android:layout_width="0dp"
						style="@style/Button_Text"
						android:background="@drawable/btn_normal"
						android:layout_weight="1" />
	            	<Button 
	                	android:id="@+id/btn_reset"
	                	android:text="@string/btn_reset"
	                	android:layout_width="0dp"
	                	android:layout_height="match_parent"
	                	android:layout_weight="1"
		                style="@style/Button_Text"
		                android:background="@drawable/btn_normal" />	            
        	    </LinearLayout>
				<LinearLayout 
                	android:id="@+id/cb_line2"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:orientation="horizontal" >
	            	<Button 
	               		android:id="@+id/btn_graph"
	                	android:text="@string/btn_graph"
	                	android:layout_width="0dp"
	                	android:layout_height="match_parent"
	                	android:layout_weight="1"
	                	style="@style/Button_Text"
	                	android:background="@drawable/btn_normal" />
	            	<Button 
		                android:id="@+id/btn_show_vector"
		                android:text="@string/btn_show_vector"
	    	            android:layout_width="0dp"
	        	        android:layout_height="wrap_content" 
	            	    android:layout_weight="1"
	                	style="@style/Button_Text"
	                	android:background="@drawable/btn_normal" />
	     		</LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/control_button_right"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="7.5">
				<ToggleButton
	                	android:id="@+id/btn_control"
                    	android:layout_width="fill_parent"
                    	android:layout_height="fill_parent"
                    	android:checked="true"
                    	android:textOn=""
                    	android:textOff=""
                    	style="@style/Button_Text"
                    	android:background="@drawable/btn_control" />
				
            </LinearLayout>            
        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
	        <TableLayout
	            android:stretchColumns="*"
	            android:id="@+id/table_properties"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >
	        </TableLayout>          
        </ScrollView>
    </LinearLayout>
</LinearLayout>
